--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@supabase/supabase-js": "^1.28.5",
     "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.2",
