--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@supabase/supabase-js": "^1.28.5",
+    "@types/styled-components": "^5.1.20",
     "axios": "^0.24.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.44.0"
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-typescript": "^1.2.1",
+    "sass": "^1.44.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "@types/react-redux": "^7.1.22",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
